--- a/app/src/main/res/layout/item_layout_project.xml
+++ b/app/src/main/res/layout/item_layout_project.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_margin="@dimen/large_margin"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:layout_margin="@dimen/large_margin"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:layout_marginEnd="@dimen/large_margin"
-                  android:layout_gravity="bottom">
-        <TextView
-                android:id="@+id/project_title"
-                style="@android:style/TextAppearance.DeviceDefault.Large"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:gravity="start|center_vertical"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginEnd="@dimen/large_margin"
+        android:layout_gravity="bottom">
 
         <TextView
-                android:id="@+id/project_duration"
-                style="@android:style/TextAppearance.DeviceDefault.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start|center_vertical"/>
+            android:id="@+id/project_title"
+            style="@android:style/TextAppearance.DeviceDefault.Large"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical" />
+
+        <TextView
+            android:id="@+id/project_duration"
+            style="@android:style/TextAppearance.DeviceDefault.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical" />
     </LinearLayout>
 
 
     <TextView
-            android:id="@+id/project_summary"
-            style="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start|center_vertical"/>
+        android:id="@+id/project_summary"
+        style="@android:style/TextAppearance.DeviceDefault.Medium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start|center_vertical" />
 
 </LinearLayout>
