--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="small_margin">10dp</dimen>
+    <dimen name="small_margin">5dp</dimen>
     <dimen name="large_margin">20dp</dimen>
     <dimen name="profile_image_height">200dp</dimen>
+
+    <dimen name="loading_bar_size">100dp</dimen>
 </resources>
